# veilbrower

./: .geminiignore  .gitignore  CHANGELOG.md  Cargo.toml  GEMINI.md  README.md  ROADMAP.md  index.html  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20240224000000_init_agent_os.sql  20260225000000_create_profiles.sql  20260225000001_create_proxies.sql  20260225000002_create_extensions.sql  20260226000000_realign_concepts.sql  20260226000001_add_task_runs_fields.sql
src-tauri/src/: bin.rs  main.rs  model_test.rs
src-tauri/src/chrome/: launcher.rs  mod.rs
src-tauri/src/commands/: artifacts.rs  contexts.rs  extensions.rs  mod.rs  proxies.rs  skills.rs  task_runs.rs
src-tauri/src/domain/: mod.rs
src-tauri/src/domain/agent/: api.rs  discovery.rs  mod.rs  scheduler.rs
src-tauri/src/domain/engine/: cdp_bridge.rs  cdp_client.rs  mod.rs  physics_input.rs
src-tauri/src/domain/engine/stealth/: canvas.js  codecs.js  hardware.js  webgl.js
src-tauri/src/domain/gateway/: api.rs
src-tauri/src/domain/identities/: api.rs  crypto.rs
src-tauri/src/domain/skills/: executor.rs  mod.rs  models.rs  parser.rs  store.rs
src-tauri/src/infrastructure/: logger.rs  mod.rs  monitor.rs  port_manager.rs
src-tauri/src/infrastructure/db/: connection.rs
src-tauri/src/infrastructure/db/repositories/: artifacts.rs  contexts.rs  extensions.rs  identities.rs  mod.rs  proxies.rs  settings.rs  (+1 more)
src-tauri/src/infrastructure/mcp/: extractor.rs  mod.rs  models.rs  server.rs  tools.rs
(+149 files in other folders)
