[package]
name = "veilbrowser-tauri"
version = "0.9.1"
edition = "2021"

[[bin]]
name = "veilbrowser-tauri"
path = "src/main.rs"

[dependencies]
tauri = { version = "2.0.0", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
anyhow = { workspace = true }
async-trait = "0.1"
tokio-tungstenite = "0.28.0"
futures-util = "0.3.32"
reqwest = { version = "0.13.2", features = ["json", "socks"] }
rand = "0.8.5"
sysinfo = "0.38.2"
lazy_static = "1.5.0"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
